final added to NodeNodeInt

--- a/HW02.ipynb
+++ b/HW02.ipynb
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr3dad6e0c.NodeInt"
+       "com.twosigma.beaker.javash.bkr42347c95.NodeInt"
       ]
      },
      "execution_count": 1,
@@ -147,8 +147,8 @@
     "}\n",
     "\n",
     "class NodeNodeInt { // 정수 리스트를 원소로 하는 리스트, 즉 \"정수 리스트\"의 리스트이다\n",
-    "    private NodeInt value;\n",
-    "    private NodeNodeInt next;\n",
+    "    private final NodeInt value;\n",
+    "    private final NodeNodeInt next;\n",
     "    // 생성자\n",
     "    NodeNodeInt(NodeInt v, NodeNodeInt n) { value=v; next=n; } \n",
     "    // 기본적인 값을 가져오기 위한 메소드\n",
@@ -296,115 +296,115 @@
      "traceback": [
       "\u001b[1;31mcannot find symbol\u001b[0;0m",
       "\u001b[1;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node<String> l0 = null\u001b[0;0m",
       "\u001b[0;31m ^   ^                   \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node<String> l1 = new Node<String>\u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node<String> l1 = new Node<String>(\"c\", l0)\u001b[0;0m",
       "\u001b[0;31m                       ^   ^                  \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node<String> l2 = new Node<>(\"b\", \u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node<String> l2 = new Node<>(\"b\", l1)\u001b[0;0m",
       "\u001b[0;31m                       ^   ^            \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node<String> l3 = new Node(\"a\", l2\u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node<String> l3 = new Node(\"a\", l2)\u001b[0;0m",
       "\u001b[0;31m                       ^   ^          \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll0 = null\u001b[0;0m",
       "\u001b[0;31m ^   ^                            \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll0 = null\u001b[0;0m",
       "\u001b[0;31m       ^   ^                      \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll1 = new Nod\u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll1 = new Node< Nod\u001b[0;0m",
       "\u001b[0;31m       ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31mNode< Node<String> > ll1 = new Node< Node<String> >(l3, ll0)\u001b[0;0m",
       "\u001b[0;31m                               ^   ^                          \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31mNode<String> > ll1 = new Node< Node<String> >(l3, ll0)\u001b[0;0m",
       "\u001b[0;31m                               ^   ^                    \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll2 = new Nod\u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll2 = new Node<>(l2\u001b[0;0m",
       "\u001b[0;31m       ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31mNode< Node<String> > ll2 = new Node<>(l2, ll1)\u001b[0;0m",
       "\u001b[0;31m                               ^   ^            \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll3 = new Nod\u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll3 = new Node(l1, \u001b[0;0m",
       "\u001b[0;31m       ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
       "\u001b[0;31mNode< Node<String> > ll3 = new Node(l1, ll2)\u001b[0;0m",
       "\u001b[0;31m                               ^   ^          \u001b[0;0m"
      ]
