--- a/Lect09.ipynb
+++ b/Lect09.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrbf909d3f.Pair"
+       "com.twosigma.beaker.javash.bkr713193c4.Pair"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,18 +58,19 @@
        "(Hello, World)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "return new Pair<String,String>(\"Hello\", \"World\");"
+    "return new Pair<String,String>(\"Hello\", \"World\");\n",
+    "// return new Pair(\"Hello\", \"World\"); // 인자로부터 타입을 정확히 알 수 있는 경우에 생략가능"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,19 +79,20 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "// Pair<int,int>는 Java에서 안된다\n",
     "// return new Pair<Integer,Integer>(new Integer(3), new Integer(4));\n",
     "return new Pair<Integer,Integer>(3, 4);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +101,7 @@
        "(3, Bye)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +112,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3, 4), (Hi, Hello))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "/* // 생성자를 호출할 때 제너릭 파라메터를 생략하지 않으면 너무나 길어지는 코드\n",
+    "return\n",
+    "    new Pair< Pair<Integer,Integer>,\n",
+    "              Pair<String,String> >( new Pair<Integer,Integer>(3,4),\n",
+    "                                     new Pair<String,String>(\"Hi\",\"Hello\") );*/\n",
+    "return new Pair(new Pair(3,4), new Pair(\"Hi\",\"Hello\"));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +146,7 @@
        "(Hello, Hello)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,13 +166,33 @@
        "(3, 3)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "return Pair.dup(3);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3, Hi), (3, Hi))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return Pair.dup(new Pair(3,\"Hi\"));"
    ]
   },
   {
