do not omit diamonds

--- a/HW02.ipynb
+++ b/HW02.ipynb
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr42347c95.NodeInt"
+       "com.twosigma.beaker.javash.bkra6fbebc1.NodeInt"
       ]
      },
      "execution_count": 1,
@@ -296,117 +296,117 @@
      "traceback": [
       "\u001b[1;31mcannot find symbol\u001b[0;0m",
       "\u001b[1;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node<String> l0 = null\u001b[0;0m",
       "\u001b[0;31m ^   ^                   \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node<String> l1 = new Node<String>\u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node<String> l1 = new Node<String>(\"c\", l0)\u001b[0;0m",
       "\u001b[0;31m                       ^   ^                  \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node<String> l2 = new Node<>(\"b\", \u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node<String> l2 = new Node<>(\"b\", l1)\u001b[0;0m",
       "\u001b[0;31m                       ^   ^            \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
-      "\u001b[0;31m Node<String> l3 = new Node(\"a\", l2\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
+      "\u001b[0;31m Node<String> l3 = new Node<>(\"a\", \u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
-      "\u001b[0;31m Node<String> l3 = new Node(\"a\", l2)\u001b[0;0m",
-      "\u001b[0;31m                       ^   ^          \u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
+      "\u001b[0;31m Node<String> l3 = new Node<>(\"a\", l2)\u001b[0;0m",
+      "\u001b[0;31m                       ^   ^            \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll0 = null\u001b[0;0m",
       "\u001b[0;31m ^   ^                            \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll0 = null\u001b[0;0m",
       "\u001b[0;31m       ^   ^                      \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll1 = new Nod\u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll1 = new Node< Nod\u001b[0;0m",
       "\u001b[0;31m       ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31mNode< Node<String> > ll1 = new Node< Node<String> >(l3, ll0)\u001b[0;0m",
       "\u001b[0;31m                               ^   ^                          \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31mNode<String> > ll1 = new Node< Node<String> >(l3, ll0)\u001b[0;0m",
       "\u001b[0;31m                               ^   ^                    \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll2 = new Nod\u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll2 = new Node<>(l2\u001b[0;0m",
       "\u001b[0;31m       ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31mNode< Node<String> > ll2 = new Node<>(l2, ll1)\u001b[0;0m",
       "\u001b[0;31m                               ^   ^            \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll3 = new Nod\u001b[0;0m",
       "\u001b[0;31m ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
-      "\u001b[0;31m Node< Node<String> > ll3 = new Node(l1, \u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll3 = new Node<>(l1\u001b[0;0m",
       "\u001b[0;31m       ^   ^                               \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
       "\u001b[0;31mcannot find symbol\u001b[0;0m",
       "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr42347c95.BeakerWrapperClass1261714175Id2e028fd5d26d4f8ebdf625fa4597bef6\u001b[0;0m",
-      "\u001b[0;31mNode< Node<String> > ll3 = new Node(l1, ll2)\u001b[0;0m",
-      "\u001b[0;31m                               ^   ^          \u001b[0;0m"
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkra6fbebc1.BeakerWrapperClass1261714175Idfe1b8cadcdb34f28afe8cf8123b070ce\u001b[0;0m",
+      "\u001b[0;31mNode< Node<String> > ll3 = new Node<>(l1, ll2)\u001b[0;0m",
+      "\u001b[0;31m                               ^   ^            \u001b[0;0m"
      ]
     }
    ],
@@ -416,14 +416,14 @@
     "Node<String> l0 = null;\n",
     "Node<String> l1 = new Node<String>(\"c\", l0);\n",
     "Node<String> l2 = new Node<>(\"b\", l1); // 생략가능\n",
-    "Node<String> l3 = new Node(\"a\", l2); // 이렇게도 생략가능\n",
+    "Node<String> l3 = new Node<>(\"a\", l2);\n",
     "\n",
     "System.out.println(\"l3: \" + l3); // a, b, c, null\n",
     "\n",
     "Node< Node<String> > ll0 = null;\n",
     "Node< Node<String> > ll1 = new Node< Node<String> >(l3, ll0);\n",
     "Node< Node<String> > ll2 = new Node<>(l2, ll1); // 생략가능\n",
-    "Node< Node<String> > ll3 = new Node(l1, ll2); // 이렇게도 생략가능\n",
+    "Node< Node<String> > ll3 = new Node<>(l1, ll2); // 이렇게도 생략가능\n",
     "\n",
     "System.out.println(\"ll3: \" + ll3); // [c, null], [b, c, null], [a, b, c, null], null\n",
     "\n",
@@ -453,7 +453,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "1.8.0_121"
+   "version": "11.0.3"
   },
   "toc": {
    "base_numbering": 1,
