--- a/Lect09.ipynb
+++ b/Lect09.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr713193c4.Pair"
+       "com.twosigma.beaker.javash.bkrc03e0e18.Pair"
       ]
      },
      "execution_count": 1,
@@ -132,7 +132,7 @@
     "    new Pair< Pair<Integer,Integer>,\n",
     "              Pair<String,String> >( new Pair<Integer,Integer>(3,4),\n",
     "                                     new Pair<String,String>(\"Hi\",\"Hello\") );*/\n",
-    "return new Pair(new Pair(3,4), new Pair(\"Hi\",\"Hello\"));"
+    "return new Pair<>(new Pair<>(3,4), new Pair<>(\"Hi\",\"Hello\"));"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "1.8.0_121"
+   "version": "11.0.3"
   },
   "toc": {
    "base_numbering": 1,
