--- a/Lect08.ipynb
+++ b/Lect08.ipynb
@@ -636,6 +636,7 @@
     "\n",
     "System.out.println(calc.v);\n",
     "\n",
+    "// 이렇게 연달아 메소드를 호출할 수 있게 하는 것을 메서드 체이닝(method chaining)이라고도 부른다\n",
     "calc.add(3).add(2).mult(2);\n",
     "/*\n",
     "calc.add(3);\n",
@@ -653,12 +654,15 @@
    "source": [
     "# 아래는 오버로딩/오버라이딩 관련\n",
     "\n",
-    "여기서부터는 나중에 다른 문서로 옮겨야 할듯"
+    "여기서부터는 나중에 다른 문서로 옮겨야 할듯\n",
+    "\n",
+    "참고로 아래에서 하는 것처럼 오버로딩으로 `equals`를 처리하는 것은 좋지 못한 방식이다.\n",
+    "`equals`를 제대로 오버라이딩하는 방법은 \"이펙티브 자바\"라는 책에도 소개되어 있는데 기회가 되는 대로 수업시간에 다룰 예정."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +679,7 @@
        "true"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,16 +696,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr7ce24be8.Point"
+       "com.twosigma.beaker.javash.bkrb0b7adcd.Point"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +745,7 @@
        "true"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
