--- a/Lect09.ipynb
+++ b/Lect09.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrc03e0e18.Pair"
+       "com.twosigma.beaker.javash.bkr95ce034d.Pair"
       ]
      },
      "execution_count": 1,
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "((3, 4), (Hi, Hello))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,22 +137,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(Hello, Hello)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ERROR",
+     "evalue": " java.lang.ClassCastException",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mERROR: java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader 'bootstrap')\u001b[0;0m"
+     ]
     }
    ],
    "source": [
-    "return Pair.dup(\"Hello\");"
+    "// 교과서 630p 에도 이것 관련 내용이 잘못 나와 있다 <>는 생략하지 말 것\n",
+    "Pair< Pair<String,Integer>, Pair<String,String> > pp\n",
+    "  = new Pair< Pair<String,Integer>,\n",
+    "              Pair<String,String> >(\n",
+    "                  new Pair(3,4),\n",
+    "                  new Pair<>(\"Hi\",\"Hello\") );\n",
+    "\n",
+    "Pair<String,Integer> p1 = pp.first();\n",
+    "String s1 = p1.first();\n",
+    "\n",
+    "return s1;"
    ]
   },
   {
@@ -163,7 +171,7 @@
     {
      "data": {
       "text/plain": [
-       "(3, 3)"
+       "(Hello, Hello)"
       ]
      },
      "execution_count": 7,
@@ -172,7 +180,7 @@
     }
    ],
    "source": [
-    "return Pair.dup(3);"
+    "return Pair.dup(\"Hello\");"
    ]
   },
   {
@@ -183,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "((3, Hi), (3, Hi))"
+       "(3, 3)"
       ]
      },
      "execution_count": 8,
@@ -192,7 +200,73 @@
     }
    ],
    "source": [
+    "return Pair.dup(3);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3, Hi), (3, Hi))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "return Pair.dup(new Pair(3,\"Hi\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 제네릭의 제한\n",
+    "\n",
+    "교과서 영상을 보자"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Java의 제너릭으로 하지 못하는 것\n",
+    "\n",
+    "제너릭 파라메터 타입의 생성자를 호출할 수 없다.\n",
+    "그러니까 T가 제네릭 파라메터일 때 new T(); 이런거 안됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": " java.lang.IllegalStateException",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mERROR: java.lang.IllegalStateException: unexpected type\u001b[0;0m",
+      "\u001b[1;31m  required: class\u001b[0;0m",
+      "\u001b[1;31m  found:    type parameter T\u001b[0;0m",
+      "\u001b[1;31m T makeT() { return new T()\u001b[0;0m",
+      "\u001b[1;31m                        ^^   \u001b[0;0m"
+     ]
+    }
+   ],
+   "source": [
+    "class C<T> {\n",
+    "    T myT;\n",
+    "    C(T t) { myT = t; }\n",
+    "    T getMyT() { return myT; }\n",
+    "    T makeT() { return new T(); }\n",
+    "}"
    ]
   },
   {
@@ -215,7 +289,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.3"
+   "version": "11.0.1"
   },
   "toc": {
    "base_numbering": 1,
