--- a/Lect09.ipynb
+++ b/Lect09.ipynb
@@ -239,7 +239,8 @@
     "## Java의 제너릭으로 하지 못하는 것\n",
     "\n",
     "제너릭 파라메터 타입의 생성자를 호출할 수 없다.\n",
-    "그러니까 T가 제네릭 파라메터일 때 new T(); 이런거 안됨"
+    "그러니까 T가 제네릭 파라메터일 때 new T(); 이런거 안됨.\n",
+    "왜냐하면 모든 클래스가 default 생성자가 항상 호출가능한 것은 아닐 수 있기 때문."
    ]
   },
   {
