--- a/Lect10.ipynb
+++ b/Lect10.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr69323002.Eq"
+       "com.twosigma.beaker.javash.bkr45fa3c28.Eq"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
     "    default public boolean notsame(T x) { return !same(x); }\n",
     "}\n",
     "\n",
-    "interface Ord<T> extends Eq<T> {\n",
+    "interface Ord<T> extends Eq<T> { // 크기 혹은 순서 비교에는 같은지 다른지 개념이 포함되므로\n",
     "    default public boolean lt(T x) { // x보다 작다\n",
     "        return !ge(x);\n",
     "    }\n",
@@ -53,16 +53,15 @@
     "    int value;\n",
     "    MyInt(int v) { value = v; }\n",
     "    @Override\n",
-    "    public boolean same(MyInt x) { return value==x.value; }\n",
-    "    /*\n",
+    "    public boolean same(MyInt x) { return value == x.value; }\n",
     "    @Override\n",
-    "    public boolean notsame(MyInt x) { return !same(x); } */\n",
+    "    public boolean lt(MyInt x) { return value < x.value; }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +69,23 @@
      "output_type": "stream",
      "text": [
       "true\n",
-      "false\n"
+      "false\n",
+      "false\n",
+      "false\n",
+      "true\n",
+      "true\n",
+      "false\n",
+      "false\n",
+      "true\n",
+      "true\n",
+      "true\n",
+      "false\n",
+      "true\n",
+      "false\n",
+      "false\n",
+      "true\n",
+      "false\n",
+      "true\n"
      ]
     },
     {
@@ -79,7 +94,7 @@
        "null"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +104,23 @@
     "MyInt x2 = new MyInt(3);\n",
     "MyInt x3 = new MyInt(4);\n",
     "System.out.println(x1.same(x2));\n",
-    "System.out.println(x2.same(x3));"
+    "System.out.println(x2.same(x3));\n",
+    "System.out.println(x1.lt(x2));\n",
+    "System.out.println(x2.lt(x1));\n",
+    "System.out.println(x1.le(x2));\n",
+    "System.out.println(x2.le(x1));\n",
+    "System.out.println(x1.gt(x2));\n",
+    "System.out.println(x2.gt(x1));\n",
+    "System.out.println(x1.ge(x2));\n",
+    "System.out.println(x2.ge(x1));\n",
+    "System.out.println(x1.lt(x3));\n",
+    "System.out.println(x3.lt(x1));\n",
+    "System.out.println(x1.le(x3));\n",
+    "System.out.println(x3.le(x1));\n",
+    "System.out.println(x1.gt(x3));\n",
+    "System.out.println(x3.gt(x1));\n",
+    "System.out.println(x1.ge(x3));\n",
+    "System.out.println(x3.ge(x1));"
    ]
   },
   {
@@ -112,7 +143,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.1"
+   "version": "11.0.3"
   },
   "toc": {
    "base_numbering": 1,
