--- a/Lect10.ipynb
+++ b/Lect10.ipynb
@@ -143,7 +143,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.3"
+   "version": "1.8.0_121"
   },
   "toc": {
    "base_numbering": 1,
