--- a/Lect11.ipynb
+++ b/Lect11.ipynb
@@ -163,13 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "arr[3] = 4\n",
       "1\n",
       "2\n",
       "3\n",
@@ -183,13 +184,15 @@
        "null"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "int arr[] = {1,2,3,4,5};\n",
+    "\n",
+    "System.out.println( \"arr[3] = \" + arr[3] );\n",
     "\n",
     "for (int v : arr) {\n",
     "    System.out.println(v);\n",
@@ -301,11 +304,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 책에 나오는 내용 중에 안하고 넘어간 거"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mylist.get(3) = 4\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "List<Integer> mylist = new LinkedList<>();\n",
+    "mylist.add(1);\n",
+    "mylist.add(2);\n",
+    "mylist.add(3);\n",
+    "mylist.add(4);\n",
+    "mylist.add(5);\n",
+    "\n",
+    "// 배열의 arr[3] 과 같은 기능을 하는 get 메소드\n",
+    "System.out.println( \"mylist.get(3) = \" + mylist.get(3) );\n",
+    "\n",
+    "for (Integer v : mylist) {\n",
+    "    System.out.println(v);\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
@@ -327,7 +376,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "1.8.0_121"
+   "version": "11.0.1"
   },
   "toc": {
    "base_numbering": 1,
