--- a/Lect11.ipynb
+++ b/Lect11.ipynb
@@ -5,23 +5,23 @@
    "metadata": {},
    "source": [
     "# Iterable, Iterator 인터페이스에 대해 알아보기\n",
-    "\n",
+    "## 교과서 44-06 관련 심화 내용 p653부터\n",
     "## Node 타입의 인스턴스 변수를 갖는 MyList 클래스 정의\n",
     "## MyList 클래스가 Iterable 인터페이스를 구현하도록"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr2ff8df36.Node"
+       "com.twosigma.beaker.javash.bkr882cbc5d.Node"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,16 +38,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr2ff8df36.MyIter"
+       "null"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "/*\n",
+    "import java.util.*;\n",
+    "\n",
+    "// MyList의 추상적인 포인터 역할을 하는 물건 (반복자)\n",
+    "class MyIter<T> implements Iterator<T> {\n",
+    "    private Node<T> node_next; // 다음 번 처리할 위치의 노드\n",
+    "    MyIter(Node<T> l) { node_next=l; }\n",
+    "    @Override\n",
+    "    public boolean hasNext() { return node_next!=null; }\n",
+    "    @Override\n",
+    "    public T next() { // 1. 다음번 처리할 노드의 값을 리턴한다\n",
+    "                      // 2. node_next를 그 다음으로 이동시킨다\n",
+    "        T v = node_next.head();\n",
+    "        node_next = node_next.tail();\n",
+    "        return v;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class MyList<T> implements Iterable<T> {\n",
+    "    private Node<T> list;\n",
+    "    @Override\n",
+    "    public Iterator<T> iterator() {\n",
+    "        return new MyIter<>(list);\n",
+    "    }\n",
+    "}\n",
+    "*/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr882cbc5d.MyIter"
+      ]
+     },
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +145,7 @@
        "null"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +188,7 @@
        "null"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,14 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arr[3] = 4\n",
       "1\n",
       "2\n",
       "3\n",
@@ -184,15 +228,13 @@
        "null"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "int arr[] = {1,2,3,4,5};\n",
-    "\n",
-    "System.out.println( \"arr[3] = \" + arr[3] );\n",
     "\n",
     "for (int v : arr) {\n",
     "    System.out.println(v);\n",
@@ -208,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +268,7 @@
        "null"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,9 +281,10 @@
     "HashSet<Integer> set = new HashSet<>();\n",
     "set.add(2);\n",
     "set.add(3);\n",
-    "set.add(3);\n",
-    "set.add(3);\n",
     "set.add(1);\n",
+    "set.add(2);\n",
+    "set.add(2);\n",
+    "\n",
     "\n",
     "for (Integer v : set) {\n",
     "    System.out.println(v);\n",
@@ -257,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +321,7 @@
        "null"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,27 +347,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 책에 나오는 내용 중에 안하고 넘어간 거"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mylist.get(3) = 4\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
+      "학번: 20181111, 이름: 김철수\n",
+      "학번: 20183333, 이름: 이영희\n",
+      "학번: 20182222, 이름: 김철수\n",
+      "학번: 20184444, 이름: 박삼순\n",
+      "학번: 20181111, 이름: 김철수\n",
+      "학번: 20183333, 이름: 이영희\n",
+      "학번: 20182222, 이름: 김철수\n",
+      "학번: 20184444, 이름: 박삼순\n"
      ]
     },
     {
@@ -333,26 +371,28 @@
        "null"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import java.util.*;\n",
+    "import org.apache.commons.lang3.tuple.*;\n",
     "\n",
-    "List<Integer> mylist = new LinkedList<>();\n",
-    "mylist.add(1);\n",
-    "mylist.add(2);\n",
-    "mylist.add(3);\n",
-    "mylist.add(4);\n",
-    "mylist.add(5);\n",
+    "HashMap<Integer, String> m1 = new HashMap<>();\n",
+    "m1.put(20181111, \"김철수\");\n",
+    "m1.put(20183333, \"이영희\");\n",
+    "m1.put(20184444, \"박삼순\");\n",
+    "m1.put(20182222, \"김철수\");\n",
     "\n",
-    "// 배열의 arr[3] 과 같은 기능을 하는 get 메소드\n",
-    "System.out.println( \"mylist.get(3) = \" + mylist.get(3) );\n",
+    "for ( Map.Entry<Integer, String> e : m1.entrySet() ) {\n",
+    "    System.out.println(\"학번: \"+e.getKey()+\", 이름: \"+e.getValue());\n",
+    "}\n",
     "\n",
-    "for (Integer v : mylist) {\n",
-    "    System.out.println(v);\n",
+    "for ( Map.Entry<Integer, String> e : m1.entrySet() ) {\n",
+    "    Pair<Integer, String> p = Pair.of(e.getKey(), e.getValue());\n",
+    "    System.out.println(\"학번: \"+p.getLeft()+\", 이름: \"+p.getRight());\n",
     "}"
    ]
   },
@@ -376,7 +416,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.1"
+   "version": "1.8.0_121"
   },
   "toc": {
    "base_numbering": 1,
