using equals in generic code

--- a/HW02.ipynb
+++ b/HW02.ipynb
@@ -319,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrebe45f50.Node"
+       "com.twosigma.beaker.javash.bkr06d9fd88.Node"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
     "    }\n",
     "    // 위의 정적 메소드에 대응되는 인스턴스 메소드\n",
     "    boolean equals(Node<T> ys) { // 같은 원소가 정확히 같은 순서로 나타나는 리스트인지 검사\n",
-    "        return ys!=null && head() == ys.head()\n",
+    "        return ys!=null && head().equals(ys.head())\n",
     "            && equals(tail(), ys.tail());\n",
     "    }\n",
     "    \n",
